Changed title and description of web in config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Octocat's homepage
-description: Bookmark this to keep an eye on my project updates!
+title: Página principal de Carlos Martínez de la Fuente
+description: ¡Estoy trabajando para crear una web con mi CV y contacto!
